--- a/model.ipynb
+++ b/model.ipynb
@@ -2,19 +2,179 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import OpenAI"
+    "# Import necessary libraries\n",
+    "import openai\n",
+    "from openai import OpenAI\n",
+    "from typing_extensions import override\n",
+    "from openai import AssistantEventHandler, OpenAI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a GPT Assistant\n",
+    "\n",
+    "# OpenAI instance\n",
+    "client = OpenAI(api_key='sk-proj-8SJdQaTpBg5tKYTtZPeCT3BlbkFJFA8gdeR1I7cwQCuBeOn2')\n",
+    "\n",
+    "assistant = client.beta.assistants.create(\n",
+    "    name=\"Diabetes AI Assistant\",\n",
+    "    description=\"An assistant that walks you through understanding diabetes.\",\n",
+    "    instructions = \"Tell me more about diabetes.\",\n",
+    "    tools=[{\"type\": \"file_search\"}],\n",
+    "    model = \"gpt-3.5-turbo\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a vector store called \"Diabetes Data\"\n",
+    "vector_store = client.beta.vector_stores.create(name=\"Diabetes Data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "completed\n",
+      "FileCounts(cancelled=0, completed=1, failed=0, in_progress=0, total=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ready the files for upload to OpenAI\n",
+    "file_paths = [\"data/diabetes.txt\"]\n",
+    "file_streams = [open(path, \"rb\") for path in file_paths]\n",
+    "\n",
+    "# Use the upload and poll SDK helper to upload the files, add them to the vector store,\n",
+    "# and poll the status of the file batch for completion.\n",
+    "file_batch = client.beta.vector_stores.file_batches.upload_and_poll(\n",
+    "    vector_store_id=vector_store.id, files=file_streams\n",
+    ")\n",
+    "\n",
+    "# You can print the status and the file counts of the batch to see the result of this operation.\n",
+    "print(file_batch.status)\n",
+    "print(file_batch.file_counts)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Assistant(id='asst_Oa8VlPuoerDBIoU9TFM0ZpW2', created_at=1716789100, description='An assistant that walks you through understanding diabetes.', instructions='Tell me more about diabetes.', metadata={}, model='gpt-3.5-turbo', name='Diabetes AI Assistant', object='assistant', tools=[FileSearchTool(type='file_search')], response_format='auto', temperature=1.0, tool_resources=ToolResources(code_interpreter=None, file_search=ToolResourcesFileSearch(vector_store_ids=['vs_9V3QYdqjQi2gRXJFbTvCuNJY'])), top_p=1.0)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Update the assistant to use the vector store\n",
+    "client.beta.assistants.update(\n",
+    "    assistant_id=assistant.id,\n",
+    "    tool_resources={\"file_search\": {\"vector_store_ids\": [vector_store.id]}}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ToolResourcesFileSearch(vector_store_ids=['vs_z0HR92sIIaFgKB92z9zsQhMs'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Upload the user provided file to OpenAI\n",
+    "message_file = client.files.create(\n",
+    "    file=open(\"diabetes.txt\", \"rb\"), purpose=\"assistants\"\n",
+    ")\n",
+    " \n",
+    "# Create a thread and attach the file to the message\n",
+    "thread = client.beta.threads.create(\n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": \"What is Diabetes mellitus?\",\n",
+    "            # Attach the new file to the message.\n",
+    "            \"attachments\": [\n",
+    "                {\"file_id\": message_file.id, \"tools\": [{\"type\": \"file_search\"}]}\n",
+    "            ],\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
+    " \n",
+    "# The thread now has a vector store with that file in its tool resources.\n",
+    "print(thread.tool_resources.file_search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the event handler\n",
+    "class EventHandler(AssistantEventHandler):\n",
+    "    def on_text_created(self, text) -> None:\n",
+    "        print(f\"\\nassistant > {text}\", end=\"\", flush=True)\n",
+    "\n",
+    "    def on_tool_call_created(self, tool_call):\n",
+    "        print(f\"\\nassistant > {tool_call.type}\\n\", flush=True)\n",
+    "\n",
+    "    def on_message_done(self, message) -> None:\n",
+    "        # print a citation to the file searched\n",
+    "        message_content = message.content[0].text\n",
+    "        annotations = message_content.annotations\n",
+    "        citations = []\n",
+    "        for index, annotation in enumerate(annotations):\n",
+    "            message_content.value = message_content.value.replace(\n",
+    "                annotation.text, f\"[{index}]\"\n",
+    "            )\n",
+    "            if file_citation := getattr(annotation, \"file_citation\", None):\n",
+    "                cited_file = client.files.retrieve(file_citation.file_id)\n",
+    "                citations.append(f\"[{index}] {cited_file.filename}\")\n",
+    "\n",
+    "        print(message_content.value)\n",
+    "        print(\"\\n\".join(citations))\n",
+    "\n",
+    "# Use the stream SDK helper with the EventHandler class to create the Run\n",
+    "with client.beta.threads.runs.stream(\n",
+    "    thread_id=thread.id,\n",
+    "    assistant_id=assistant.id,\n",
+    "    instructions=\"Please address the user as Jane Doe. The user has a premium account.\",\n",
+    "    event_handler=EventHandler(),\n",
+    ") as stream:\n",
+    "    stream.until_done()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +184,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   }
  },
