--- a/model.ipynb
+++ b/model.ipynb
@@ -22,7 +22,7 @@
     "# Create a GPT Assistant\n",
     "\n",
     "# OpenAI instance\n",
-    "client = OpenAI(api_key='sk-proj-8SJdQaTpBg5tKYTtZPeCT3BlbkFJFA8gdeR1I7cwQCuBeOn2')\n",
+    "client = OpenAI(api_key='API-KEY')\n",
     "\n",
     "assistant = client.beta.assistants.create(\n",
     "    name=\"Diabetes AI Assistant\",\n",
